@@ -7,12 +7,28 @@ package Test::FailWarnings;
 # VERSION
 
 use Test::More 0.86;
+use Carp;
+
+our $ALLOW_DEPS = 0;
+
+sub import {
+    my ( $class, @args ) = @_;
+    croak( "import arguments must be key/value pairs" )
+        unless @args % 2 == 0;
+    my %opts = @args;
+    $ALLOW_DEPS = $opts{'-allow_deps'};
+}
 
 $SIG{__WARN__} = sub {
     my $msg = shift;
     $msg = '' unless defined $msg;
     chomp $msg;
-    my ($package, $filename, $line) = caller;
+    my ( $package, $filename, $line ) = caller;
+
+    # shortcut if ignoring dependencies and warning did not
+    # come from something local
+    return if $ALLOW_DEPS && $filename !~ /^(?:t|xt|lib|blib)/;
+
     if ( $msg !~ m/at .*? line \d/ ) {
         chomp $msg;
         $msg = "'$msg' at $filename line $line.";
@@ -22,7 +38,7 @@ $SIG{__WARN__} = sub {
     }
     my $builder = Test::More->builder;
     $builder->ok( 0, "Caught warning" )
-        or $builder->diag("Warning was $msg");
+      or $builder->diag("Warning was $msg");
 };
 
 1;
@@ -62,6 +78,19 @@ don't need to know the test count in advance.
 
 Just as with L<Test::NoWarnings>, this does not catch warnings if other things
 localize C<$SIG{__WARN__}>, as this is designed to catch I<unhandled> warnings.
+
+=head1 USAGE
+
+=head2 Allowing warnings from dependencies
+
+If you want to ignore failures from outside your own code, you can set the
+C<$ALLOW_DEPS> package variable to a true value.  You can do that on the C<use>
+line with C<< -allow_deps => 1 >>.
+
+    use Test::FailWarnings -allow_deps => 1;
+
+When true, warnings will only be thrown if they appear to originate from a filename
+matching C<< qr/^(?:t|xt|lib|blib)/ >>
 
 =head1 SEE ALSO
 
