@@ -2,6 +2,10 @@ Revision history for Test-FailWarnings
 
 {{$NEXT}}
 
+    [ADDED]
+
+    - Now can optionally allow warnings from dependencies
+
 0.001     2013-02-25 17:44:33 America/New_York
 
     - First release
